fix sonar cloud reliability issue

--- a/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
+++ b/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
@@ -16,7 +16,7 @@
                     routerLink="/ai/images">Images</a>
             </div>
             <div class="d-flex gap-2">
-                <button id="zone-admin-button" class="btn btn-primary" routerLink="">ÉrablièreIU</button>
+                <button id="zone-eraliereiu-button" class="btn btn-primary" routerLink="">ÉrablièreIU</button>
                 @if (mapFeatureEnable) {
                 <button id="zone-carte-button" class="btn btn-primary" routerLink="/map"><span>🗺️ </span>Carte</button>
                 }
