fix new user flow on UI

--- a/ErabliereIU/src/app/admin-view/admin-customers/admin-customers.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-customers/admin-customers.component.html
@@ -12,6 +12,7 @@
           [customers]="customers"
           (customerASupprimer)="supprimerCustomer($event)"
           (customerAModifier)="demarrerModifierCustomer($event)"
+          [listLoading]="listLoading"
         ></customer-list>
     </div>
     <div>
