--- a/ErabliereIU/src/app/admin-view/admin-customers/customer-list/customer-list.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-customers/customer-list/customer-list.component.html
@@ -20,6 +20,15 @@
             </tr>
         </thead>
         <tbody>
+            @if (listLoading) {
+            <tr>
+                <td colspan="8" class="text-center">
+                    <div class="spinner-border text-primary">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </td>
+            </tr>
+            }
             @for (customer of customersFiltred; track customer.id) {
             <tr>
                 <td class="min">
