update stripe nuget and loading on capteur table

--- a/ErabliereIU/src/app/client-view/capteurs/gestion-capteurs.component.html
+++ b/ErabliereIU/src/app/client-view/capteurs/gestion-capteurs.component.html
@@ -13,7 +13,11 @@
     }
 </div>
 
-<capteur-list [idErabliere]="idErabliereSelectionee" [capteurs]="capteurs" (shouldRefreshCapteurs)="getCapteurs()" />
+<capteur-list 
+    [idErabliere]="idErabliereSelectionee" 
+    [capteurs]="capteurs" 
+    [loading]="loadingCapteurs" 
+    (shouldRefreshCapteurs)="getCapteurs()" />
 
 <div>
     @if(afficherSectionAjouterCapteurImage) {
