--- a/ErabliereIU/src/app/client-view/capteurs/capteur-list.component.html
+++ b/ErabliereIU/src/app/client-view/capteurs/capteur-list.component.html
@@ -1,8 +1,7 @@
 <!-- Une table qui liste les page-capteurs -->
 @if (displayTooltip) {
 <emodal (closeModal)="closeTooltip()" title="Détails du capteur" [displayFooter]="false">
-    <capteur-detail-tooltip [capteur]="capteurTT"
-        (needToUpdate)="closeTooltip()"></capteur-detail-tooltip>
+    <capteur-detail-tooltip [capteur]="capteurTT" (needToUpdate)="closeTooltip()"></capteur-detail-tooltip>
 </emodal>
 }
 
@@ -21,90 +20,102 @@
     <app-modifier-capteur-style [inputCapteur]="editStyleSelected"></app-modifier-capteur-style>
 </emodal>
 }
-<form class="table-responsive" novalidate>
-    <table class="table table-striped mb-5">
-        <thead>
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col" class="col-sm-1">Indice</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Symbole</th>
-                <th scope="col">Graphique&nbsp;affiché</th>
-                <th scope="col">Saisie&nbsp;manuelle</th>
-                <th scope="col">Date&nbsp;création</th>
-                <th scope="col" class="min"></th>
-                <th scope="col" class="min"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @for(capteur of capteurs; track capteur.id) {
-            <tr [id]="'capteur-' + capteur.id">
-                <td>
-                    <copy-id-button [text]="capteur.id" title="Copier l'id du capteur {{capteur.id}}"></copy-id-button>
-                </td>
-                <td>
-                    <span>{{capteur.indiceOrdre}}</span>
-                </td>
-                <td>
-                    <span style="text-decoration: underline; cursor: pointer;" (click)="openTooltip(capteur, $event)"
-                        (keyup)="keyUpTooltip(capteur, $event)">{{capteur.nom}}</span>
-                </td>
-                <td>
-                    <span>{{capteur.symbole}}</span>
-                </td>
-                <td class="text-center align-middle">
-                    @if(capteur.afficherCapteurDashboard) {
-                    <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-check" viewBox="0 0 16 16">
-                            <path
-                                d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
-                        </svg>
-                    </span>
-                    }
-                </td>
-                <td class="text-center align-middle">
-                    @if(capteur.ajouterDonneeDepuisInterface) {
-                    <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-check" viewBox="0 0 16 16">
-                            <path
-                                d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
-                        </svg>
-                    </span>
-                    }
-                </td>
-                <td>
-                    {{formatDateJour(capteur.dc)}}
-                </td>
-                <td class="text-lg-end">
+
+<table class="table table-striped mb-5">
+    <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col" class="col-sm-1">Indice</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Symbole</th>
+            <th scope="col">Graphique&nbsp;affiché</th>
+            <th scope="col">Saisie&nbsp;manuelle</th>
+            <th scope="col">Date&nbsp;création</th>
+            <th scope="col" class="min"></th>
+            <th scope="col" class="min"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @if (loading) {
+        <tr>
+            <td colspan="9" class="text-center">
+                Chargement des capteurs...
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+            </td>
+        </tr>
+        } @else if (capteurs.length === 0) {
+        <tr>
+            <td colspan="9" class="text-center">
+                Aucun capteur trouvé.
+            </td>
+        </tr>
+        }
+        @for(capteur of capteurs; track capteur.id) {
+        <tr [id]="'capteur-' + capteur.id">
+            <td>
+                <copy-id-button [text]="capteur.id" title="Copier l'id du capteur {{capteur.id}}"></copy-id-button>
+            </td>
+            <td>
+                <span>{{capteur.indiceOrdre}}</span>
+            </td>
+            <td>
+                <span style="text-decoration: underline; cursor: pointer;" (click)="openTooltip(capteur, $event)"
+                    (keyup)="keyUpTooltip(capteur, $event)">{{capteur.nom}}</span>
+            </td>
+            <td>
+                <span>{{capteur.symbole}}</span>
+            </td>
+            <td class="text-center align-middle">
+                @if(capteur.afficherCapteurDashboard) {
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-check" viewBox="0 0 16 16">
+                        <path
+                            d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
+                    </svg>
+                </span>
+                }
+            </td>
+            <td class="text-center align-middle">
+                @if(capteur.ajouterDonneeDepuisInterface) {
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-check" viewBox="0 0 16 16">
+                        <path
+                            d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
+                    </svg>
+                </span>
+                }
+            </td>
+            <td>
+                {{formatDateJour(capteur.dc)}}
+            </td>
+            <td class="text-lg-end">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-outline-primary btn-sm"
+                        (click)="showModifierCapteurDetails(capteur)">Modifier</button>
+
                     <div class="btn-group">
-                        <button type="button" class="btn btn-outline-primary btn-sm"
-                            (click)="showModifierCapteurDetails(capteur)">Modifier</button>
+                        <button class="btn btn-outline-primary btn-sm dropdown-toggle" type="button"
+                            id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 
-                        <div class="btn-group">
-                            <button class="btn btn-outline-primary btn-sm dropdown-toggle" type="button"
-                                id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li>
-                                    <button class="dropdown-item" type="button"
-                                        (click)="showModifierCapteurStyle(capteur)">
-                                        Modifier le style
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li>
+                                <button class="dropdown-item" type="button" (click)="showModifierCapteurStyle(capteur)">
+                                    Modifier le style
+                                </button>
+                            </li>
+                        </ul>
                     </div>
-                </td>
-                <td class="text-lg-start min">
-                    <button type="button" class="btn btn-outline-danger btn-sm"
-                        (click)="supprimerCapteur(capteur)">Supprimer</button>
-                </td>
-            </tr>
-            }
+                </div>
+            </td>
+            <td class="text-lg-start min">
+                <button type="button" class="btn btn-outline-danger btn-sm"
+                    (click)="supprimerCapteur(capteur)">Supprimer</button>
+            </td>
+        </tr>
+        }
 
-        </tbody>
-    </table>
-</form>
+    </tbody>
+</table>
