--- a/ErabliereIU/src/app/client-view/rapport/rapports.component.html
+++ b/ErabliereIU/src/app/client-view/rapport/rapports.component.html
@@ -1,7 +1,8 @@
 <h3>Rapports</h3>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
+    <h5>Générer un nouveau rapport</h5>
     <div class="form-group">
       <label for="typeRapport">Type de rapport</label>
       <select class="form-control" id="typeRapport" (change)="typeRapportChanged($event)">
@@ -19,16 +20,16 @@
     }
   </div>
 
-  <div class="col-md-6">
-    <!-- Liste des rapports enregistré -->
+  <div class="col-md-8">
+    <h4>Rapports enregistrés</h4>
     <div>
-      <h4>Rapports enregistrés</h4>
       <ul class="list-group">
         @for (rapport of rapportsSaved; track rapport) {
           <a class="list-group-item" [class.active]="rapportSelected?.id === rapport.id" style="cursor: pointer;" (click)="selectReport(rapport)">
             <a class="m-1">{{rapport.type}} - {{rapport.nom}} - {{ formatDate(rapport.dateDebut) }} - {{ formatDate(rapport.dateFin) }}</a>
             <div class="btn-group" style="float: right;">
               <button class="btn btn-sm btn-info" (click)="refreshRapport(rapport)">Rafraichir</button>
+              <button class="btn btn-sm btn-secondary" (click)="openModifierRapportModal(rapport)">Modifier</button>
               <button class="btn btn-sm btn-danger" (click)="deleteRapport(rapport)">Supprimer</button>
             </div>
           </a>
@@ -42,4 +43,17 @@
   <div class="row">
     <app-tableau-rapport [rapport]="rapportSelected"></app-tableau-rapport>
   </div>
+}
+
+@if (isOpenModifierRapportModal) {
+  <emodal
+    [title]="'Modifier le rapport'"
+    (closeModal)="closeModifierRapportModal()"
+    [displayFooter]="false">
+    <app-modifier-rapport
+      [rapport]="rapportSelected"
+      (rapportModifie)="onRapportModifie($event)"
+      (closeModal)="closeModifierRapportModal()">
+    </app-modifier-rapport>
+  </emodal>
 }
