--- a/ErabliereIU/src/app/client-view/rapport/rapports.component.html
+++ b/ErabliereIU/src/app/client-view/rapport/rapports.component.html
@@ -52,7 +52,7 @@
     [displayFooter]="false">
     <app-modifier-rapport
       [rapport]="rapportSelected"
-      (rapportModifie)="onRapportModifie($event)"
+      [idErabliereSelectionee]="idErabliereSelectionee"
       (closeModal)="closeModifierRapportModal()">
     </app-modifier-rapport>
   </emodal>
