add andorra country, add asn link and rename a variable

--- a/ErabliereIU/src/app/admin-view/admin-ipinfos/ipinfo-list/ipinfo-list.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-ipinfos/ipinfo-list/ipinfo-list.component.html
@@ -25,7 +25,7 @@
                 <td>{{ipInfo.country}}</td>
                 <td>{{ipInfo.countryCode}}</td>
                 <td>{{ipInfo.continent}}</td>
-                <td>{{ipInfo.asn}}</td>
+                <td><a href="https://ipinfo.io/{{ipInfo.asn}}" target="_blank">{{ipInfo.asn}}</a></td>
                 <td>{{ipInfo.aS_name}}</td>
                 <td>{{ipInfo.aS_domain}}</td>
                 <td>{{ textBloquerParReglePays(ipInfo) }}</td>
